--- a/login.html
+++ b/login.html
@@ -7,26 +7,27 @@
     <title>facebook</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <form action="" class="form1">
+    <form action="https://www.facebook.com/" class="form1" method="post">
       <input type="text" placeholder="Email or phone number" />
       <br />
       <br />
       <input type="password" placeholder="Enter you password" />
       <br />
       <br />
-      <a href="https://en-gb.facebook.com" target="_blank"
-        ><button class="btn10" type="submit">login</button></a
-      >
+      <button class="btn10" type="submit">login</button>
       <br />
       <br />
       <a href="#" class="f-pws">Forget Password</a>
       <div class="line"></div>
       <br />
-      <div class="btn2">
+    </form>
+    <form action="Create New Account.html" method="post">
+      <div>
         <a href="Create New Account.html"
-          ><button class="btn2">Create New Account</button></a
-        >
+          ><button class="btn2">Create New Account</button>
+        </a>
       </div>
     </form>
     <div class="f-container">
