--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <form action="https://www.facebook.com/" class="form1" method="post">
+    <form action="https://www.facebook.com" class="form1" method="post">
       <input type="text" placeholder="Email or phone number" />
       <br />
       <br />
