--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>facebook</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/media/facebook.ico">
   </head>
 
   <body>
-    <form action="https://www.facebook.com" class="form1" method="post">
+    <form action="https://facebook.com" class="form1" method="post">
       <input type="text" placeholder="Email or phone number" />
       <br />
       <br />
